# monopoly

./: DESAFIO.md  Makefile  README.md  pyproject.toml
src/: Makefile  main.py
src/monopoly/: settings.toml
src/monopoly/board/: base.py  card_patrimony.py  factory.py  game_board.py  game_statistics.py  player_cautious.py  player_demanding.py  player_impulsive.py  player_random.py
src/tests/: conftest.py  test_board.py  test_player.py
